--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "ftps": "^0.4.6",
+    "httpdispatcher": "^1.0.0",
     "xmlrpc": ">=1.3.0"
   },
   "author": "DarknessGP <darknessgp@gmail.com>",
