--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "homepage": "https://github.com/darknessgp/RTorrentEcho",
   "description": "Provide automated downloads from rtorrent client with lftp",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/darknessgp/RTorrentEcho.git"
@@ -14,8 +13,8 @@
     "url": "https://github.com/darknessgp/RTorrentEcho/issues"
   },
   "dependencies": {
+    "express": "^4.13.4",
     "ftps": "^0.4.6",
-    "httpdispatcher": "^1.0.0",
     "xmlrpc": ">=1.3.0"
   },
   "author": "DarknessGP <darknessgp@gmail.com>",
