#1 updating to allow label passed in via route parameter. Updating to pull download location from config based on label Updating version number to 0.5

--- a/config.json.sample
+++ b/config.json.sample
@@ -7,5 +7,7 @@
   "pass": "pass",
   "isSecure": false,
   "pget": 5,
-  "useTemp": true
+  "useTemp": true,
+  "rootDownloadFolder":"/download",
+  "labelDownloadFolders": { "tv": "/tv", "movie": "/movie" }
 }
