Adding label download folders and a done label to config Adding torrent object for easier handling of all the data to be tracked Updating rtorrent client to be able to set a new label in rutorrent for #3 Updating sync to run downloads in order with relabelling on complete   this is a bit sloppy, but devent for a start.

--- a/config.json.sample
+++ b/config.json.sample
@@ -9,5 +9,6 @@
   "pget": 5,
   "useTemp": true,
   "rootDownloadFolder":"/download",
-  "labelDownloadFolders": { "tv": "/tv", "movie": "/movie" }
+  "labelDownloadFolders": { "tv": "/tv", "movie": "/movie" },
+  "doneLabel": "Done"
 }
