Correcting local path with ending slash Updating sync to have configurable delay in post download logic so external tools have time to do what they need to

--- a/config.json.sample
+++ b/config.json.sample
@@ -10,5 +10,6 @@
   "useTemp": true,
   "rootDownloadFolder":"/download",
   "labelDownloadFolders": { "tv": "/tv", "movie": "/movie" },
-  "doneLabel": "Done"
+  "doneLabel": "Done",
+  "doneLabelDelay": 300
 }
