Adding option for verbose logging, for now shows command sent to lftp.

--- a/config.json.sample
+++ b/config.json.sample
@@ -11,5 +11,6 @@
   "rootDownloadFolder":"/download",
   "labelDownloadFolders": { "tv": "/tv", "movie": "/movie" },
   "doneLabel": "Done",
-  "doneLabelDelay": 300
+  "doneLabelDelay": 300,
+  "verboseLogging": false
 }
