--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "express": "^4.13.4",
         "ftps": "^0.4.6",
-        "xmlrpc": ">=1.3.0"
+        "xmlrpc": ">=1.3.0",
+        "node-unrar": "^0.1.2"
     },
     "author": "DarknessGP <darknessgp@gmail.com>",
     "license": "MIT",
