--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
     "name": "torrent-echo",
     "version": "0.5.0",
-    "homepage": "https://github.com/darknessgp/TorrentEcho",
+    "homepage": "https://github.com/dsara/TorrentEcho",
     "description": "Provide automated downloads from rtorrent client with lftp",
-    "main": "index.js",
-    "scripts": {},
+    "main": "/build/index.js",
+    "scripts": {
+        "tsc": "tsc"
+    },
     "repository": {
         "type": "git",
-        "url": "https://github.com/darknessgp/TorrentEcho.git"
+        "url": "https://github.com/dsara/TorrentEcho.git"
     },
     "bugs": {
-        "url": "https://github.com/darknessgp/TorrentEcho/issues"
+        "url": "https://github.com/dsara/TorrentEcho/issues"
     },
     "dependencies": {
-        "express": "^4.13.4",
+        "express": "^4.16.3",
         "ftps": "^1.1.0",
         "node-unrar": "^0.1.5",
-        "request": "^2.87.0"
+        "request": "^2.87.0",
+        "typescript": "^2.8.3"
     },
     "devDependencies": {
+        "@types/express": "^4.11.1",
+        "@types/node": "^10.1.2",
         "@types/request": "^2.47.0",
-        "@types/node": "^10.1.2"
+        "tslint": "^5.10.0"
     },
     "author": "DarknessGP <darknessgp@gmail.com>",
     "license": "MIT",
     "keywords": [
-        "rtorrent",
+        "deluge",
         "torrent",
         "lftp"
     ]
