--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "express": "^4.16.3",
+        "fs-extra": "^6.0.1",
         "ftps": "^1.1.0",
         "node-unrar": "^0.1.5",
         "request": "^2.87.0",
@@ -23,6 +24,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.11.1",
+        "@types/fs-extra": "^5.0.2",
         "@types/node": "^10.1.2",
         "@types/request": "^2.47.0",
         "tslint": "^5.10.0"
