--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "ftps": "^1.1.0",
         "node-unrar": "^0.1.5",
         "request": "^2.87.0",
+        "shell-escape": "^0.2.0",
         "typescript": "^2.8.3"
     },
     "devDependencies": {
