--- a/config.json.sample
+++ b/config.json.sample
@@ -1,18 +1,17 @@
 {
   "mode": "xmlrpc",
-  "host": "localhost",
-  "port": 80,
-  "path": "/RPC1",
+  "host": "subdomain.host.com",
+  "port": 12345,
+  "path": "/deluge/json",
   "user": "username",
-  "pass": "pass",
-  "isSecure": false,
-  "pget": 5,
-  "useTemp": true,
+  "pass": "password",
+  "chownUser": 1026,
+  "chownGroup": 101,
+  "pget": 30,
   "rootDownloadFolder":"/download",
-  "labelDownloadFolders": { "tv": "/tv", "movie": "/movie" },
-  "doneLabel": "Done",
-  "doneLabelDelay": 300,
-  "verboseLogging": false,
-  "syncFolders": {"tv": { "source": "/download", "destination": "/download"}},
-  "syncRemoveSource": true
+  "nodeDownloadFolder":"/download",
+  "tvShowsDestination": "/tv",
+  "labelDownloadFolders": { "test": "/tv" },
+  "doneLabel": "done",
+  "doneLabelDelay": 300
 }
