--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "node-unrar": "^0.1.5",
         "request": "^2.87.0",
         "shell-escape": "^0.2.0",
-        "typescript": "^2.8.3"
+        "typescript": "^2.8.3",
+        "lodash": "4.17.15",
+        "duplex-child-process": "1.0.1"
     },
     "devDependencies": {
         "@types/express": "^4.11.1",
