--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "shell-escape": "^0.2.0",
         "typescript": "^2.8.3",
         "lodash": "4.17.15",
+        "xmlrpc": "1.3.2",
         "duplex-child-process": "1.0.1"
     },
     "devDependencies": {
@@ -30,6 +31,7 @@
         "@types/fs-extra": "^5.0.2",
         "@types/node": "^10.1.2",
         "@types/request": "^2.47.0",
+        "@types/xmlrpc": "^1.3.6",
         "tslint": "^5.10.0"
     },
     "author": "DarknessGP <darknessgp@gmail.com>",
